--- a/cfg/PathTrackingConfig.cfg
+++ b/cfg/PathTrackingConfig.cfg
@@ -8,5 +8,6 @@ gen = ParameterGenerator()
 gen.add("lookahead_distance", double_t, 0, "Lookahead distance for path tracking", 6.0, 1.0, 10.0)
 gen.add("vehicle_speed", double_t, 0, "Vehicle speed", 2.8, 0.0, 5.0)
 gen.add("goal_tolerance", double_t, 0, "Tolerance for reaching the goal", 6.0, 0.1, 10.0)
+gen.add("steering_limit", double_t, 0.5, "Steering Angle Range Limit in Radians", 0.61, 0.5, 1.0)
 
 exit(gen.generate(PACKAGE, "path_tracking_configure", "PathTracking"))
